# Programming

#1/#1/: Function.cpp
#1/#2/: Autotests.h  main.cpp
#1/#3/: Autotests.cpp  Function.cpp  main.cpp
#1/#4/: Py #4.py
#1/#5/: Py #5.py
#1/#6/: py #6.py
#1/#7/: Autotest.cpp  Autotest.h  Function.cpp
#1/#8/: Autotest.cpp  Header.h  main.cpp
#2/#1/: Autotest.cpp  Autotest.h  Header.h  main.cpp
#2/#2/: Autotests.cpp  Header.h  function.cpp
#2/#3/: Header.h
#2/#7/: Header.h  main.cpp
#2/#8/: Function.cpp
#3/Arithmetic coding/: CMakeLists.txt  Decode.cpp  Encode.cpp  Header.h  README.md  Table.cpp  main.cpp
#3/CStack/: CMakeLists.txt  CStack.h  CStack_methods.cpp  Header.h  README.md  main.cpp  test.cpp
#3/CVector/: CMakeLists.txt  CVector.h  CVector_methods.cpp  CVector_operators.cpp  Header.h  README.md  main.cpp  test.cpp
#3/CintN/: CMakeLists.txt  CintN.hpp  CintN_methods.cpp  CintN_operators.cpp  Header.hpp  README.md  functions.cpp  main.cpp
#3/Points and polygon/: PythonApplication20.py  README.md
